--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -263,9 +263,10 @@ div.navraber {
   @include dynamic-flex(center, center, center, row);
   position: sticky;
   top: 0px;
+  border-radius: 15px;
   // filter: blur(8px);
   // -webkit-filter: blur(8px);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(25px);
   // background-color: $main-c;
   z-index: 999;
   div.navlinks {
@@ -355,6 +356,10 @@ div.home {
         @include Totile-H(3.2rem, $color4);
         font-weight: 600;
         text-align: center;
+        &.rate_title {
+          @include Totile-H(2rem, $color4);
+          font-weight: 600;
+        }
       }
 
       p {
@@ -368,7 +373,7 @@ div.home {
       }
     }
     button {
-      @include btn-web(20%);
+      @include btn-web(35%);
       margin: 4% 0px;
     }
     img.her_icons {
@@ -437,35 +442,52 @@ div.sponser {
     width: 90%;
     height: 100%;
     background-color: $color1;
-    @include dynamic-flex(center, center, center, 12%);
+    @include dynamic-flex(center, center, row, 5%);
     border-radius: 10px;
     padding: 1% 0px;
-    div.logo_shirkad {
-      width: 100px;
-      height: 100px;
-      border-radius: 100%;
-      img {
-        object-fit: cover;
+    div.mid {
+      @include dynamic-flex(center, center, column, 2%);
+      // background-color: $btn_c;
+      width: 130px;
+      height: 130px;
+      border-radius: 5px;
+      border-bottom: solid 1px $btn_c;
+      div.text_nooc {
+        h2 {
+          @include Totile-H(1.2rem, $color2);
+        }
+        p {
+          @include qoraal-p(1rem, $color4);
+        }
       }
     }
   }
 }
 
 // Qiimayaasha
-
 div.qiimayasha {
   width: 100%;
   height: 100%;
   @include flex-box(column);
-  padding: 3% 0px;
+  padding: 2% 0px;
+  margin-top: 3%;
   div.text_an_title {
     width: 60%;
     height: 100%;
     position: relative;
+    margin: 3% 0px;
     h2 {
       @include Totile-H(1.5rem, $color4);
       text-align: center;
       font-weight: 500;
+    }
+    img {
+      width: 65px;
+      height: 65px;
+    }
+
+    p {
+      @include qoraal-p(1rem, $color4);
     }
   }
 
@@ -477,28 +499,102 @@ div.qiimayasha {
     margin: 15px 0px;
     div.nooc {
       width: calc(80% / 3);
-      height: 200px;
-      background-color: $color2;
+      height: 100%;
       border-radius: 5px;
-      background-color: $color4;
+      background-color: $btn_c;
       @include flex-box(column);
-      flex-flow: wrap column;
+      flex-flow: wrap row;
       div.icon {
         width: 50px;
         height: 50px;
         border-radius: 100%;
-        display: inline;
+        margin-top: 10%;
+        @include flex-box(column);
       }
       div.qiimaha {
         width: 100%;
         height: 100%;
         padding: 5px 0px;
         h2 {
-          @include Totile-H(1.3rem, $color1);
+          @include Totile-H(1.4rem, $color4);
           font-weight: 500;
+          text-align: center;
         }
         p {
+          @include Totile-H(1.1rem, $color4);
+          padding: 15px 15px;
+          text-align: center;
         }
+      }
+    }
+  }
+}
+
+// Footer
+div.footer {
+  width: 100%;
+  background: $main-c;
+  padding: 3% 0px;
+  div.footer_cointainer {
+    @include flex-box(row);
+    gap: 60px;
+    div.parts_footer {
+      flex: 1;
+      /* background-color: #2466ff; */
+      padding: 3% 2px;
+      @include flex-box(column);
+
+      div.logo_footer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 0px;
+        h2 {
+          @include qoraal-p(1rem, $color4);
+        }
+      }
+      ul.footer_links {
+        width: 100%;
+        height: 100%;
+        @include dynamic-flex(center, center, column, 5px);
+        @extend %reset-ul;
+      }
+    }
+  }
+
+  div.info_footer {
+    p.pp_foter {
+      color: $btn_c;
+    }
+  }
+}
+
+// ABOUT
+div.about {
+  width: 100%;
+  height: 100%;
+  @include dynamic-flex(center, center, row, 12px);
+  div.qayb {
+    width: calc(85% / 2);
+    @include flex-box(column);
+    height: 500px;
+    &.sawir {
+      img {
+        position: relative !important;
+      }
+    }
+
+    &.qoraal {
+      h2 {
+        @include qoraal-p(1.5, $btn_c);
+        margin-bottom: 15px;
+        text-align: left;
+      }
+
+      p {
+        @include qoraal-p(1.1rem, $color3);
       }
     }
   }
