--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -345,6 +345,104 @@ div.home {
     height: 100%;
     position: relative;
     @include flex-box(row);
+    div.Xisaabcom {
+      width: 100%;
+      height: 100%;
+      margin: 20px 0px;
+      div.section_xisaab {
+        width: 100%;
+        height: 100%;
+        padding: 3% 0px;
+        form {
+          width: 100%;
+          height: 100%;
+          @include dynamic-flex(center, center, column, 15px);
+          div.dahab_n {
+            width: 100%;
+            height: 100%;
+            @include flex-box(row);
+            gap: 20px;
+            label {
+              width: 24%;
+            }
+            select.n_dahab {
+              width: 40%;
+              height: 55px;
+            }
+          }
+          div.checkh_box {
+            width: 65%;
+            height: 100%;
+            @include flex-box(column);
+            align-items: flex-start;
+            h2 {
+              @include qoraal-p(1.1rem, $btn_c);
+              font-weight: normal;
+              margin: 10px 0px;
+            }
+            div.doorasho {
+              width: 100%;
+              height: 100%;
+              @include flex-box(row);
+              justify-content: space-between;
+              padding: 10px 0px;
+              div.gaar {
+                width: calc(95% / 3);
+                @include flex-box(row);
+                input {
+                  width: 20px;
+                  height: 20px;
+                  margin: 0px 4px;
+                }
+                label {
+                  color: $color4;
+                }
+              }
+            }
+          }
+          select,
+          input {
+            width: 65%;
+            height: 55px;
+            border: solid 1px $btn_c_h;
+            outline: none;
+            border-radius: 7px;
+            padding: 15px 15px;
+            background-color: transparent;
+            @include qoraal-p(1.2rem, $color4);
+            caret-color: $btn_c;
+            option {
+              @include qoraal-p(1.2rem, $color4);
+              background-color: $main-c;
+            }
+          }
+
+          div.btn_actions {
+            width: 65%;
+            height: 55px;
+            @include flex-box(row);
+            gap: 20px;
+            button {
+              &.ka_noqo {
+                background-color: transparent;
+                color: $color4;
+                border: solid 1px $color2;
+                &:hover {
+                  background-color: $color2;
+                  color: $color4;
+                }
+              }
+            }
+          }
+
+          label {
+            width: 65%;
+            text-align: left;
+            @include qoraal-p(1.1rem, $btn_c);
+          }
+        }
+      }
+    }
     div.text_hero {
       width: 100%;
       height: 100%;
@@ -484,6 +582,13 @@ div.sponser {
     p {
       @include qoraal-p(1rem, $color3);
       margin-bottom: 4px;
+      span {
+        color: $btn_c;
+        @include qoraal-p(1.1rem, $color3);
+      }
+      i {
+        color: $btn_c;
+      }
     }
   }
   div.sponser_com_logos {
@@ -520,7 +625,7 @@ div.qiimayasha {
   padding: 2% 0px;
   margin-top: 3%;
   div.text_an_title {
-    width: 60%;
+    width: 65%;
     height: 100%;
     position: relative;
     margin: 3% 0px;
@@ -653,6 +758,23 @@ div.Reviews {
   }
 }
 
+// over
+div.over {
+  width: 100%;
+  height: 100vh;
+  // background-color: $btn_c_h;
+  backdrop-filter: blur(15px);
+  z-index: 9999999;
+  position: fixed;
+  @include flex-box(column);
+  div.popxisaab {
+    width: 65%;
+    height: 500px;
+    background-color: $color4;
+    border-radius: 7px;
+  }
+}
+
 // Footer
 div.footer {
   width: 100%;
@@ -741,6 +863,93 @@ div.about {
 // }
 
 // all media  responsive part
+
+// loading
+.sk-chase {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  animation: sk-chase 2.5s infinite linear both;
+}
+
+.sk-chase-dot {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: sk-chase-dot 2s infinite ease-in-out both;
+}
+
+.sk-chase-dot:before {
+  content: "";
+  display: block;
+  width: 25%;
+  height: 25%;
+  background-color: #fff;
+  border-radius: 100%;
+  animation: sk-chase-dot-before 2s infinite ease-in-out both;
+}
+
+.sk-chase-dot:nth-child(1) {
+  animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2) {
+  animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4) {
+  animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5) {
+  animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6) {
+  animation-delay: -0.6s;
+}
+.sk-chase-dot:nth-child(1):before {
+  animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2):before {
+  animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3):before {
+  animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4):before {
+  animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5):before {
+  animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6):before {
+  animation-delay: -0.6s;
+}
+
+@keyframes sk-chase {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes sk-chase-dot {
+  80%,
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes sk-chase-dot-before {
+  50% {
+    transform: scale(0.4);
+  }
+  100%,
+  0% {
+    transform: scale(1);
+  }
+}
 
 @include Break-Points(xsm) {
   .haye {
