--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -348,7 +348,7 @@ div.home {
     div.Xisaabcom {
       width: 100%;
       height: 100%;
-      margin: 20px 0px;
+      padding-top: 10%;
       div.section_xisaab {
         width: 100%;
         height: 100%;
