--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -597,6 +597,21 @@ div.home {
         width: 50%;
         height: 100%;
         @include flex-box(column);
+        p.shuruudo {
+          @include qoraal-p(1.2rem, $color4);
+          margin-top: 5px;
+          text-align: left;
+        }
+        h2 {
+          @include qoraal-p(2rem, $btn_c);
+          @include flex-box(column);
+          font-weight: 600;
+        }
+        h3.jawaab_h3 {
+          @include qoraal-p(1.5rem, $color4);
+          @include flex-box(column);
+          font-weight: 600;
+        }
         h3 {
           @include qoraal-p(1.2rem, $color4);
           @include flex-box(column);
@@ -605,6 +620,16 @@ div.home {
         p {
           @include qoraal-p(1rem, $color4);
           margin-top: 5px;
+        }
+      }
+      div.btns_jawaab {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        @include flex-box(row);
+        column-gap: 15px;
+        button {
+          @include btn-web(20%);
         }
       }
     }
