--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -491,6 +491,13 @@ div.home {
     button {
       @include btn-web(35%);
       margin: 4% 0px;
+      &.spiners_btn {
+        @include flex-box(column);
+        div.sk-chase {
+          width: 25px;
+          height: 25px;
+        }
+      }
     }
     img.her_icons {
       position: absolute;
@@ -585,6 +592,13 @@ div.home {
         width: 100%;
         height: 150px;
         @include flex-box(column);
+        span.qalad {
+          div {
+            svg {
+              width: 25% !important;
+            }
+          }
+        }
         div {
           margin: 10px 0px;
           @include flex-box(column);
@@ -597,20 +611,30 @@ div.home {
         width: 50%;
         height: 100%;
         @include flex-box(column);
-        p.shuruudo {
-          @include qoraal-p(1.2rem, $color4);
-          margin-top: 5px;
-          text-align: left;
+        div.shuruud_title {
+          p.shuruudo {
+            @include qoraal-p(1.2rem, $color4);
+            margin-top: 5px;
+            text-align: left;
+            i {
+              color: $btn_c;
+            }
+          }
+          h4.title_sh {
+            @include qoraal-p(1.2rem, $color2);
+          }
         }
         h2 {
           @include qoraal-p(2rem, $btn_c);
           @include flex-box(column);
           font-weight: 600;
+          text-align: left;
         }
         h3.jawaab_h3 {
           @include qoraal-p(1.5rem, $color4);
           @include flex-box(column);
           font-weight: 600;
+          text-align: left;
         }
         h3 {
           @include qoraal-p(1.2rem, $color4);
@@ -938,88 +962,53 @@ div.about {
 // all media  responsive part
 
 // loading
-.sk-chase {
-  width: 40px;
-  height: 40px;
-  position: relative;
-  animation: sk-chase 2.5s infinite linear both;
+.spinner {
+  margin: 1px auto 0;
+  width: 70px;
+  text-align: center;
 }
 
-.sk-chase-dot {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  animation: sk-chase-dot 2s infinite ease-in-out both;
-}
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: $color4;
 
-.sk-chase-dot:before {
-  content: "";
-  display: block;
-  width: 25%;
-  height: 25%;
-  background-color: #fff;
   border-radius: 100%;
-  animation: sk-chase-dot-before 2s infinite ease-in-out both;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
 
-.sk-chase-dot:nth-child(1) {
-  animation-delay: -1.1s;
-}
-.sk-chase-dot:nth-child(2) {
-  animation-delay: -1s;
-}
-.sk-chase-dot:nth-child(3) {
-  animation-delay: -0.9s;
-}
-.sk-chase-dot:nth-child(4) {
-  animation-delay: -0.8s;
-}
-.sk-chase-dot:nth-child(5) {
-  animation-delay: -0.7s;
-}
-.sk-chase-dot:nth-child(6) {
-  animation-delay: -0.6s;
-}
-.sk-chase-dot:nth-child(1):before {
-  animation-delay: -1.1s;
-}
-.sk-chase-dot:nth-child(2):before {
-  animation-delay: -1s;
-}
-.sk-chase-dot:nth-child(3):before {
-  animation-delay: -0.9s;
-}
-.sk-chase-dot:nth-child(4):before {
-  animation-delay: -0.8s;
-}
-.sk-chase-dot:nth-child(5):before {
-  animation-delay: -0.7s;
-}
-.sk-chase-dot:nth-child(6):before {
-  animation-delay: -0.6s;
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
 }
 
-@keyframes sk-chase {
-  100% {
-    transform: rotate(360deg);
-  }
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
 }
 
-@keyframes sk-chase-dot {
+@-webkit-keyframes sk-bouncedelay {
+  0%,
   80%,
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
   }
 }
 
-@keyframes sk-chase-dot-before {
-  50% {
-    transform: scale(0.4);
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
   }
-  100%,
-  0% {
+  40% {
+    -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
