--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,9 +1,9 @@
 //variables
 $theme: "dark";
-$main-c: #1d1b1b;
+$main-c: #0f172a;
 $btn_c: #4c40f7;
 $btn_c_h: #5c50fc;
-$color1: #2c2a2a;
+$color1: #1e293b;
 $color2: #ffad60;
 $color3: #a9a9a9;
 $color4: #fff;
@@ -217,7 +217,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 15px;
 }
 
 /* Track */
