--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -197,7 +197,7 @@ $color4: #fff;
 
 * {
   scrollbar-color: $main-c;
-  scrollbar-width: thin;
+  scrollbar-width: 10px;
 }
 
 // html {
@@ -212,12 +212,16 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  user-select: $btn_c;
+  user-select: $color1;
+  ::selection {
+    color: $btn_c;
+    background-color: $color1;
+  }
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 5px;
 }
 
 /* Track */
@@ -227,16 +231,16 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: $color1;
+  background: $btn_c;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: $main-c;
+  background-color: $btn_c;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: $main-c;
+  background-color: $btn_c;
 }
 .haye {
   width: 100%;
