--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -380,16 +380,18 @@ div.home {
           height: 100%;
           @include dynamic-flex(center, center, column, 15px);
           div.dahab_n {
-            width: 100%;
             height: 100%;
+            width: 65%;
             @include flex-box(row);
             gap: 20px;
             label {
-              width: 24%;
+              width: 100% !important;
             }
             select.n_dahab {
-              width: 40%;
+              width: 100% !important;
               height: 55px;
+              //background-color: $color1;
+              background-color: transparent;
             }
           }
           div.checkh_box {
@@ -587,89 +589,6 @@ div.home {
         }
       }
     }
-
-    div.thanksreviews {
-      width: 100%;
-      height: 100%;
-      @include flex-box(column);
-      div.animationimage {
-        width: 100%;
-        height: 150px;
-        @include flex-box(column);
-        span.qalad {
-          div {
-            svg {
-              width: 25% !important;
-            }
-          }
-        }
-        div {
-          margin: 10px 0px;
-          @include flex-box(column);
-          svg {
-            width: 30% !important;
-          }
-        }
-      }
-      div.qoraal {
-        width: 50%;
-        height: 100%;
-        @include flex-box(column);
-        div.shuruud_title {
-          p.shuruudo {
-            @include qoraal-p(1.2rem, $color4);
-            margin-top: 5px;
-            text-align: left;
-            i {
-              color: $btn_c;
-            }
-          }
-          h4.title_sh {
-            @include qoraal-p(1.2rem, $color2);
-          }
-        }
-        h2 {
-          @include qoraal-p(2rem, $btn_c);
-          @include flex-box(column);
-          font-weight: 600;
-          text-align: left;
-        }
-        h3.jawaab_h3 {
-          @include qoraal-p(1.5rem, $color4);
-          @include flex-box(column);
-          font-weight: 600;
-          text-align: left;
-        }
-        h3 {
-          @include qoraal-p(1.2rem, $color4);
-          @include flex-box(column);
-          font-weight: 600;
-        }
-        p {
-          @include qoraal-p(1rem, $color4);
-          margin-top: 5px;
-        }
-      }
-      div.btns_jawaab {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        @include flex-box(row);
-        column-gap: 15px;
-        button {
-          @include btn-web(20%);
-          &.ka_noqo {
-            background-color: transparent;
-            color: $color4;
-            border: solid 1px $color2;
-            &:hover {
-              background-color: $color2;
-              color: $color4;
-            }
-          }
-        }
-      }
-    }
   }
 }
 
@@ -822,13 +741,32 @@ div.Reviews {
     padding: 5% 0px;
     div.user_rev {
       width: calc(95% / 4);
-      background-color: $btn_c;
-      border-radius: 10px;
+      background-color: $color1;
+      border-radius: 2px;
+      border-bottom: solid 3px $btn_c;
+      // border-top: solid 3px $btn_c;
       padding: 3% 2%;
       transition: all ease-in-out 0.4s;
       &:hover {
         @include dyshadow(0px, 10px, 5px, 4px);
         transition: all ease-in-out 0.4s;
+        transform: translate(0px, 15px);
+        z-index: 2;
+        background-color: $main-c;
+        // div.name_comments {
+        //   h3 {
+        //     @include qoraal-p(0.99rem, $color4);
+        //   }
+        //   p {
+        //     @include qoraal-p(1rem, $color4);
+        //     button {
+        //       @include btn-web(40%);
+        //       height: 30px;
+        //       font-size: 12px;
+        //       background-color: $main-c;
+        //     }
+        //   }
+        // }
       }
       div.userimage {
         width: 100%;
@@ -858,7 +796,7 @@ div.Reviews {
           @include qoraal-p(0.99rem, $color4);
         }
         p {
-          @include qoraal-p(1rem, $main-c);
+          @include qoraal-p(1rem, $color3);
           button {
             @include btn-web(40%);
             height: 30px;
@@ -871,20 +809,110 @@ div.Reviews {
   }
 }
 
-// over
-div.over {
+// ModelJawaab
+div.ModelJawaab {
   width: 100%;
   height: 100vh;
-  // background-color: $btn_c_h;
   backdrop-filter: blur(15px);
   z-index: 9999999;
   position: fixed;
   @include flex-box(column);
-  div.popxisaab {
-    width: 65%;
-    height: 500px;
-    background-color: $color4;
+  visibility: hidden;
+  &.active {
+    visibility: visible;
+  }
+  div.meesha_jawaabta {
+    width: 55%;
+    height: 450px;
+    background-color: $color1;
     border-radius: 7px;
+    @include flex-box(column);
+    overflow: hidden;
+    div.thanksreviews {
+      width: 100%;
+      height: 100%;
+      @include flex-box(row);
+      div.animationimage {
+        width: 100%;
+        height: 90px;
+        @include flex-box(column);
+        span.qalad {
+          div {
+            svg {
+              width: 25% !important;
+            }
+          }
+        }
+        div {
+          margin: 10px 0px;
+          @include flex-box(column);
+          svg {
+            width: 20% !important;
+          }
+        }
+      }
+      div.qoraal {
+        width: 100%;
+        height: 60%;
+        //@include flex-box(row);
+        @include dynamic-flex(center, center, column, 0px);
+        div.shuruud_title {
+          padding: 0px 10%;
+          p.shuruudo {
+            @include qoraal-p(1.2rem, $color4);
+            margin-top: 5px;
+            text-align: left;
+            i {
+              color: $btn_c;
+            }
+          }
+          h4.title_sh {
+            @include qoraal-p(1.2rem, $color2);
+          }
+        }
+        h2 {
+          @include qoraal-p(2rem, $btn_c);
+          @include flex-box(column);
+          font-weight: 600;
+          text-align: left;
+        }
+        h3.jawaab_h3 {
+          @include qoraal-p(1.5rem, $color4);
+          @include flex-box(column);
+          font-weight: 600;
+          text-align: left;
+        }
+        h3 {
+          @include qoraal-p(1.2rem, $color4);
+          @include flex-box(column);
+          font-weight: 600;
+        }
+        p {
+          @include qoraal-p(1rem, $color4);
+          margin-top: 5px;
+        }
+      }
+      div.btns_jawaab {
+        width: 100%;
+        height: 20%;
+        position: relative;
+        @include flex-box(row);
+        column-gap: 15px;
+        padding: 15px 0px;
+        button {
+          @include btn-web(20%);
+          &.ka_noqo {
+            background-color: transparent;
+            color: $color4;
+            border: solid 1px $color2;
+            &:hover {
+              background-color: $color2;
+              color: $color4;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
