--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -828,6 +828,8 @@ div.ModelJawaab {
     border-radius: 7px;
     @include flex-box(column);
     overflow: hidden;
+    border-top: solid 1px $btn_c;
+    //border-right: solid 1px $btn_c;
     div.thanksreviews {
       width: 100%;
       height: 100%;
