--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -783,6 +783,7 @@ div.Reviews {
   width: 100%;
   height: 100%;
   @include flex-box(column);
+  scroll-margin-top: 5rem;
   div.ciwaan {
     width: 90%;
     height: 100%;
