--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -895,6 +895,12 @@ div.ModelJawaab {
     overflow: hidden;
     border-top: solid 1px $btn_c;
     //border-right: solid 1px $btn_c;
+    //Project details
+    &.details {
+      height: 80vh;
+      width: 80%;
+      background-color: $color1;
+    }
     div.thanksreviews {
       width: 100%;
       height: 100%;
