--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1085,6 +1085,7 @@ div.mashariic {
   padding: 20px 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
   gap: 30px;
   div.mashruuc {
     padding: 15px 15px;
